Fix unable to click in some areas on mobile

--- a/wwfypc-react/src/Shared/style/Menu.scss
+++ b/wwfypc-react/src/Shared/style/Menu.scss
@@ -144,5 +144,8 @@
         transform: translateY(0);
       }
     }
+    &.is-closed {
+      pointer-events: none;
+    }
   }
 }
